--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next_js_starter_kit",
+  "name": "sql_sheet",
   "author": {
     "name": "naveen1337",
     "email": "naveen1337@protonmail.com",
@@ -18,18 +18,25 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@sinclair/typebox": "^0.32.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "ajv": "^8.12.0",
+    "ajv-errors": "^3.0.0",
+    "ajv-formats": "^2.1.1",
+    "ajv-keywords": "^5.1.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
     "next": "^13.5.6",
+    "next-connect": "^1.0.0",
     "pg": "^8.11.2",
     "pino": "^8.16.2",
     "react": "18.2.0",
