--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@sentry/nextjs": "^7.91.0",
     "@sinclair/typebox": "^0.32.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -27,6 +28,7 @@
     "ajv-formats": "^2.1.1",
     "ajv-keywords": "^5.1.0",
     "bcrypt": "^5.1.1",
+    "config": "^3.3.9",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "eslint": "8.31.0",
@@ -47,6 +49,7 @@
   "devDependencies": {
     "@types/pg": "^8.10.2",
     "autoprefixer": "^10.4.13",
+    "pino-pretty": "^10.3.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
   }
